# LinearAlgebra

./: .gitignore  Algebra.cc  Algebra.h  Factorizer.cc  Factorizer.h  GaloisFieldExtension.h  Polynomial.h  README.md  RandomPolynomialGenerator.h  examples.cc
Visual Studio/: Algebra.sln
Visual Studio/CyclicCodes/: CyclicCodes.vcxproj  CyclicCodes.vcxproj.filters  ICyclicCodes.h  main.cpp  reed_muller.h
Visual Studio/LinearAlgebra/: LinearAlgebra.vcxproj  LinearAlgebra.vcxproj.filters
Visual Studio/LinearAlgebra/Tests/: test_algebra.cpp
clion/: CMakeLists.txt
src/algebra/: Algebra.cc  Algebra.h  ConsecutivePolynomialGenerator.h  Factorizer.cc  Factorizer.h  GaloisFieldExtension.h  Polynomial.cc  Polynomial.h  PolynomialGenerator.h  RandomPolynomialGenerator.h  examples.cc
src/algebra/common/: combinatorics.h
src/algebra/finite/: Field.h  FiniteAlgebraError.h  Group.h  Ring.h
src/algebra/finite/impl/: IntGroup.h
src/algebra/utils/: utils.cc  utils.h
src/codes/: example.cc
src/codes/core/: IBlockCode.h  ICode.h  ICodeData.h  ICyclicCode.h  ILinearCode.h
src/codes/impl/: BCHCode.h  ReedMullerCode.h
src/examples/: examples_algebra.cc  examples_codes.cc
src/utils/: utils.cc  utils.h
tests/: test_algebra.cc
vs/: Algebra.sln
vs/Codes/: Codes.vcxproj  Codes.vcxproj.filters
vs/CyclicCodes/: CyclicCodes.vcxproj  CyclicCodes.vcxproj.filters
vs/LinearAlgebra/: LinearAlgebra.vcxproj  LinearAlgebra.vcxproj.filters
vs/SharedUtils/: SharedUtils.vcxitems  SharedUtils.vcxitems.filters
vs/Tests/: Tests.vcxproj  Tests.vcxproj.filters
vs/Tests_Codes/: Tests_Codes.vcxproj  Tests_Codes.vcxproj.filters
